Changes in version 1.3.1 (?? Mar 2007)

 - Added rect::constrainTo for locking a rectangle inside another without resizing it

 - Moved the OpenGL API functions from COpenGL driver into new extension
   handler. Thereby, some renaming took place - the ARB and EXT suffix was
   removed. Simply rename the functions in case you use them.

 - matrix4 is now a template internally such that also int and double matrices
   are possible now.

 - CMeshBuffer is a new template replacing all previous SMeshBuffer* classes.
   New mesh buffers can be easily implemented based on this code.

 - Ogre 1.40 files now also load.

 - New filename based methods in the MeshCache.

 - CSphereSceneNode is now texture wrapped with sphere mapping by exactly one
   texture. Only a small error on the top remained.
   
 - The Sky box scene node now clamps its textures now by default (meaning no more ugly
   artifacts at the borders).

 - Frustum culling fixed by using the fixed classifyPointRelation function.

 - Some fixes in the 3d basic structures: plane3d.classifyPointRelation now
   correctly returns the relation, it returned the opposite before. Also
   renamed existsInterSection to existsIntersection for consistency.
   triangle3d.isOnSameSide is now private - it's just a helper class not
   intended for further use.

 - Added IFileSystem::getFileDir, to get the directory when given a file 
   name. Submitted by Jeff Myers

 - Updated to latest PNG library (1.2.18), fixing a vulnerability.
   Also changed some data structures which should make the library 64bit
   compatible.

 - Changed the external window pointer from s32 to void*. This makes the
   mechanism 64bit safe, but also breaks the API. You have to cast to
   void* now.

 - Moved image scaling algorithms to CImage class and made them public. This
   replaces lots of code from the hardware textures. It should also fix the
   missing MipMaps in OpenGL if the driver does not support mipmap generation.
